// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapToGolCostDtoArray should map the gql data only including fields on the picklist 1`] = `
[
  {
    "costCategoryId": "0",
  },
  {
    "costCategoryId": "2",
  },
  {
    "costCategoryId": "unknown category",
  },
]
`;

exports[`mapToGolCostDtoArray should map the gql data to the correct Dtos filtering out for not New and not Claim Detail records 1`] = `
[
  {
    "costCategoryId": "0",
    "costCategoryName": "Labour",
    "value": 1000,
  },
  {
    "costCategoryId": "2",
    "costCategoryName": "Materials",
    "value": 1000,
  },
  {
    "costCategoryId": "unknown category",
    "costCategoryName": undefined,
    "value": 0,
  },
]
`;
